--- a/Section_5/Selector_Excerise/selectors.css
+++ b/Section_5/Selector_Excerise/selectors.css
@@ -52,7 +52,7 @@ text {
 }
 
 /* Give both <p>'s inside the 3rd <div> a pink background*/
-div:nth-of-type(3) + p {
+div:nth-of-type(3) p {
 	background-color: pink;
 }
 
