--- a/Section_6/CSS_Blog_Exercise/BlogFromScratch.css
+++ b/Section_6/CSS_Blog_Exercise/BlogFromScratch.css
@@ -1,15 +1,10 @@
-* {
-	font-family: Source Sans Pro;
-}
-
 body {
-	margin: 20%;
+	margin: 20px auto;
 	padding: 20px;
 	border: 20px solid #bdc3c7;
-}
-
-h2 {
-	color: #2c3e50;
+	max-width: 700px;
+	width: 80%;
+	font-family: Source Sans Pro;
 }
 
 .date {
@@ -18,11 +13,28 @@ h2 {
 	text-transform: uppercase;
 }
 
-div p:nth-of-type(1) {
+.quote {
 	border-left: 5px solid #bdc3c7;
 	padding-left: 5px;
 }
 
+.post {
+	margin-bottom: 20px;
+}
+
+h2 {
+	color: #2c3e50;
+	font-size: 2rem;
+	font-weight: 700;
+}
+
 hr {
-	border: 2px solid #bdc3c777;
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(
+		to right,
+		rgba(100, 100, 100, 0),
+		rgba(100, 100, 100, 0.75),
+		rgba(100, 100, 100, 0)
+	);
 }
